--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     },
     "engines": {
         "node": ">=6.0"
+    },
+    "devDependencies": {
+        "gulp": "^4.0.0",
+        "gulp-eslint": "^4.0.2"
     }
 }
