try to fix build

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "devDependencies": {
         "gulp": "^4.0.0",
+        "gulp-cli": "^2.0.1",
         "gulp-eslint": "^4.0.2"
-    }
+    },
+    "dependencies": {}
 }
