--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
         "gulp-eslint": "^4.0.2"
     },
     "dependencies": {
-        "log4js": "^2.5.3"
+        "simple-node-logger": "^0.93.37"
     }
 }
