--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "gulp-eslint": "^4.0.2"
     },
     "dependencies": {
-        "simple-node-logger": "^0.93.37"
+        "simple-node-logger": "^0.93.37",
+        "winston-loggly-bulk": "^2.0.2"
     }
 }
