--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,6 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-
 # Runtime data
 pids
 *.pid
@@ -49,3 +47,4 @@ jspm_packages/
 .gitignore
 .idea/
 /yarn.lock
+dist/
